--- a/3-variableinplaybook.yml
+++ b/3-variableinplaybook.yml
@@ -19,5 +19,8 @@
       state: directory
   - name: static website is deployed
     uri:
-      url: https://raw.githubusercontent.com/aselnazarova/ansible-lab/main/index.html
+      url: https://raw.githubusercontent.com/sprintqaDevOps/ansible/main/playbooks/index.html
       dest: "{{ webserver_root_dir }}"
+  - name: debug
+    debug:
+      msg: "web host server locations is {{ webserver_root_dir }}"
