--- a/14-if_condition.yml
+++ b/14-if_condition.yml
@@ -17,12 +17,12 @@
       path: "{{ webserver_root_dir }}"
       state: directory
   - name: static website is deployed
-    when: today == 'awesome'
+    when: today == 'tired'
     uri:
       url: https://raw.githubusercontent.com/sprintqaDevOps/ansible/main/playbooks/index.html
       dest: "{{ webserver_root_dir }}"
   - name: contacts page is deployed
-    when: today == 'awesome'
+    when: today == 'tired'
     uri:
       url: https://raw.githubusercontent.com/sprintqaDevOps/ansible/main/playbooks/contacts.html
       dest: "{{ webserver_root_dir }}"
