--- a/36-ansible_ec2_creation.yml
+++ b/36-ansible_ec2_creation.yml
@@ -10,4 +10,8 @@
       key_name: mac-new
       region: us-east-1
       wait: yes
-      
+      group_id:
+        - devops
+      instance_tags:
+        - Environment: web
+        - Name: clientNode5
